--- a/FrontEnd/Login_Page.html
+++ b/FrontEnd/Login_Page.html
@@ -35,11 +35,11 @@
                  padding: 20px;
                 }
         </style>
-     <meta charset="utf-8">
+        <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>WebFront for Car Soccer</title>
         <meta name="description" content="User Interface">
-        <link rel="stylesheet" href="carStyle.css";
+        <link rel="stylesheet" href="carStyle.css">;
     </head>
      <body>
 
@@ -58,8 +58,14 @@
       <option value="BlueTeam">Blue Team</option>
     </select>
 
-    <input type="submit" value="Submit">
+    <input type="submit" value="Submit" id = "playGame">
   </form>
 </div>  
     </body>
+     <script type= "text/javascript">
+            document.getElementById("playGame").onclick = function(){
+                location.href = "TheGame.html";
+            }
+    
+    </script>
 </html>
