--- a/FrontEnd/Login_Page.html
+++ b/FrontEnd/Login_Page.html
@@ -35,6 +35,7 @@
                  padding: 20px;
                 }
         </style>
+        
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>WebFront for Car Soccer</title>
@@ -42,29 +43,12 @@
         <link rel="stylesheet" href="carStyle.css">;
     </head>
      <body>
-
-           <div>
-  <form action="/action_page.php">
-    <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-    <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-    <label for="team">Team</label>
-    <select id="team" name="team">
-      <option value="Choose">Choose</option>     
-      <option value="RedTeam">Red Team</option>
-      <option value="BlueTeam">Blue Team</option>
-    </select>
-
-    <input type="submit" value="Submit" id = "playGame">
-  </form>
-</div>  
+         <div>
+ <input type="submit" value="Submit" id = "playGame"></div>
     </body>
      <script type= "text/javascript">
             document.getElementById("playGame").onclick = function(){
-                location.href = "TheGame.html";
+                location.href = "The_Game.html";
             }
     
     </script>
