I split all of the Javascript from the html

--- a/FrontEnd/Login_Page.html
+++ b/FrontEnd/Login_Page.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
     <style>
@@ -42,14 +42,11 @@
         <meta name="description" content="User Interface">
         <link rel="stylesheet" href="carStyle.css">;
     </head>
-     <body>
-         <div>
- <input type="submit" value="Submit" id = "playGame"></div>
+    <body>
+        <div>
+            <input type="submit" value="Submit" id="playGame">
+        </div>
+        <script src="Login_Page.js"></script>
     </body>
-     <script type= "text/javascript">
-            document.getElementById("playGame").onclick = function(){
-                location.href = "The_Game.html";
-            }
-    
-    </script>
+     
 </html>
