--- a/FrontEnd/Welcome_Page.html
+++ b/FrontEnd/Welcome_Page.html
@@ -289,33 +289,6 @@ onclick="document.getElementById('id02').style.display='block'" style="width:aut
   </form>
 </div>
 <button3 style="width:auto" id="direct1"> Guest </button3>
-
-<script type=text/javascript>
-// Get the modal
-var modal = document.getElementById('id01');
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-    if (event.target == modal) {
-        modal.style.display = "none";
-    }
-}
-var modal = document.getElementById('id02');
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-    if (event.target == modal) {
-        modal.style.display = "none";
-    }
-}
-    document.getElementById("direct").onclick = function(){
-        location.href = "Game_Lobby.html";
-    }
-    document.getElementById("direct1").onclick = function(){
-        location.href = "Login_Page.html";
-    }
-             
-    
-    </script>
+<script src="Welcome_Page.js"></script>
     </body>
 </html>
