--- a/FrontEnd/Website_Code/Analytics.html
+++ b/FrontEnd/Website_Code/Analytics.html
@@ -1,15 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>WebFront for Car Soccer</title>
     <meta name="description" content="User Interface">
     <link rel="stylesheet" href="carStyle.css">
 
 </head>
+<meta charset="utf-8">
+<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script>
+    $(document).ready(function(){
+        var firstThing = $.ajax({
+            type: 'GET',
+            url: "/request/firstThing",
+            data: {},
+            async: false
+        });
+
+        var secondThing = $.ajax({
+            type: 'GET',
+            url: "/request/secondThing",
+            data: {},
+            async: false
+        });
+
+        var parsedFirstThing = JSON.parse(firstThing.responseText);
+        var parsedSecondThing = JSON.parse(secondThing.responseText);
+
+        for (var i=0; i<parsedFirstThing.length; i++){
+            var object = parsedFirstThing[i];
+
+
+        }
+    });
+
+</script>
 
 <body>
+    <div id = "1">
+
+    </div>
+
+    <div id = "2">
+
+    </div>
+
+    <div id = "3">
+
+    </div>
+
     <script src="Analytics.js"></script>
 </body>
 </html>
