submit button on welcome page now working

--- a/FrontEnd/Website_Code/Analytics.html
+++ b/FrontEnd/Website_Code/Analytics.html
@@ -40,15 +40,15 @@
 
 <body>
     <div id = "1">
-
+        <h2>Past Games</h2>
     </div>
 
     <div id = "2">
-
+        <h2>Total Goals</h2>
     </div>
 
     <div id = "3">
-
+        <h2>Win/Loss Ratio</h2>
     </div>
 
     <script src="Analytics.js"></script>
