--- a/FrontEnd/Website_Code/EndGame.html
+++ b/FrontEnd/Website_Code/EndGame.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 
@@ -17,6 +17,14 @@
 </head>
 
 <body>
+    <div class=" chart-container">
+        <canvas id="line-chartcanvas"></canvas>
+    </div>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/Chart.min.js"></script>
+    
+    <script src="js/line-db-php.js"></script>
+
     <script src="EndGame.js"></script>
 </body>
 </html>
