--- a/FrontEnd/Website_Code/Analytics.html
+++ b/FrontEnd/Website_Code/Analytics.html
@@ -34,20 +34,24 @@
 
 
         }
+		
+		for (var i=0; i<parsedSecondThing.length; i++){
+			var object = parsedSecondThing[i];
+		}
     });
 
 </script>
 
 <body>
-    <div id = "1">
+    <div id = "1" align = "center">
         <h2>Past Games</h2>
     </div>
 
-    <div id = "2">
+    <div id = "2" align = "center">
         <h2>Total Goals</h2>
     </div>
 
-    <div id = "3">
+    <div id = "3" align = "center">
         <h2>Win/Loss Ratio</h2>
     </div>
 
