submit button on welcome page now working

--- a/FrontEnd/Website_Code/The_Game.html
+++ b/FrontEnd/Website_Code/The_Game.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>WebFront for Car Soccer</title>
+    <script src = "https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale =1.0">
     <link rel="stylesheet" href="carStyle.css" />
 
@@ -12,6 +13,6 @@
 
 <body onload="startGame()">
     <buttonQ class="buttonQ" id="buttonQ"> QUIT </buttonQ>
-    <script src="The_Game.js"></script>
+    <script src="/The_Game.js"></script>
 </body>
 </html>
