--- a/FrontEnd/Website_Code/Welcome_Page.html
+++ b/FrontEnd/Website_Code/Welcome_Page.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>WebFront for Car Soccer</title>
     <meta name="description" content="User Interface">
+    <script src = "https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.js"></script>
     <link rel="stylesheet" type="text/css" href="carStyle.css">
 </head>
 <body>
