--- a/FrontEnd/Website_Code/Welcome_Page.html
+++ b/FrontEnd/Website_Code/Welcome_Page.html
@@ -34,7 +34,7 @@
             <input type="submit" value="submit">Submit
         </div>
 
-        <div class="container" style="background-color:">
+        <div class="container">
             <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">
                 Cancel
             </button>
@@ -63,10 +63,10 @@
             <label for="password"><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="password" required>
 
-            <input type="submit" value="submit" id="direct">Submit</input>
+            <input type="submit" value="submit" id="direct">Submit
         </div>
 
-        <div class="container" style="background-color">
+        <div class="container">
             <button type="button" onclick="document.getElementById('id02').style.display='none'" class="cancelbtn2">
                 Cancel
             </button>
