--- a/FrontEnd/Website_Code/The_Game.html
+++ b/FrontEnd/Website_Code/The_Game.html
@@ -13,6 +13,6 @@
 
 <body onload="startGame()">
     <buttonQ class="buttonQ" id="buttonQ"> QUIT </buttonQ>
-    <script src="/The_Game.js"></script>
+    <script src="The_Game.js"></script>
 </body>
 </html>
