--- a/FrontEnd/Website_Code/Login_Page.html
+++ b/FrontEnd/Website_Code/Login_Page.html
@@ -11,7 +11,17 @@
         <div>
             <input type="submit" value="Submit" id="playGame">
         </div>
+        <div class="count"></div>
+
         <script src="Login_Page.js"></script>
+
+        <script id="count-template" type="text/template">
+            <span class="current top <%= currentSize %>"><%= time %></span>
+            <span class="next top <%= nextSize %>"><%= nextTime %></span>
+            <span class="current bottom <%= currentSize %>"><%= time %></span>
+            <span class="next bottom <%= nextSize %>"><%= nextTime %></span>
+        </script>
+
     </body>
      
 </html>
