--- a/FrontEnd/Website_Code/The_Game.html
+++ b/FrontEnd/Website_Code/The_Game.html
@@ -14,8 +14,6 @@
 <body onload="startGame()">
     <buttonQ class="buttonQ" id="buttonQ"> QUIT </buttonQ>
     <script src="The_Game.js"></script>
-    <script src="state_key.js"></script>
-    <script src="Timer.js"></script>
-    <script src="Boost.js"></script>
+    <div> Time left =<span id="timer"></span></div>
 </body>
 </html>
