Updated html the Game

--- a/FrontEnd/Website_Code/The_Game.html
+++ b/FrontEnd/Website_Code/The_Game.html
@@ -14,6 +14,7 @@
 <body onload="startGame()">
     <buttonQ class="buttonQ" id="buttonQ"> QUIT </buttonQ>
     <script src="The_Game.js"></script>
+    <script src="state_key.js"></script>
     <div> Time left =<span id="timer"></span></div>
 </body>
 </html>
