--- a/FrontEnd/Website_Code/Game_Lobby.html
+++ b/FrontEnd/Website_Code/Game_Lobby.html
@@ -12,9 +12,8 @@
         <div class="bgimg"></div>
         <div class="container">
             <div class="topPage">Main Page</div>
-            <buttonSet id="settings" style="width:auto;"> Settings</buttonSet>
-            <buttonGame id="game" style="width:auto;" style="width:auto"> Play Game</buttonGame>
-            <buttonStat style="width:auto" id="stats"> Statistics </buttonStat>
+            <buttonGame id="game" style="width:auto;"> Play Game</buttonGame>
+            <buttonStat id="stats" style="width:auto;"> Statistics </buttonStat>
         </div>
 
         <script src="Game_Lobby.js"></script>
