--- a/FrontEnd/Website_Code/Game_Lobby.html
+++ b/FrontEnd/Website_Code/Game_Lobby.html
@@ -6,16 +6,14 @@
         <title>WebFront for Car Soccer</title>
         <meta name="description" content="User Interface">
         <link rel="stylesheet" href="carStyle.css">
-        
     </head>
     <body>
         <div class="bgimg"></div>
         <div class="container">
             <div class="topPage">Main Page</div>
-            <buttonGame id="game" style="width:auto;"> Play Game</buttonGame>
-            <buttonStat id="stats" style="width:auto;"> Statistics </buttonStat>
+            <buttonStat class="buttonStat" id="stats">Statistics</buttonStat>
+            <buttonGame class="buttonGame" id="game">Play Game</buttonGame>
         </div>
-
         <script src="Game_Lobby.js"></script>
     </body>
 </html>
