--- a/FrontEnd/Website_Code/EndGame.html
+++ b/FrontEnd/Website_Code/EndGame.html
@@ -18,16 +18,16 @@
 
 <body>
     <div class="bgimg"></div>
-    <div class="container">
+    <div class="container1">
         <div class="centered">GAME OVER</div>
     </div>
-    <div class=" chart-container">
+    <!--<div class=" chart-container">
         <canvas id="line-chartcanvas"></canvas>
     </div>
     <script src="js/jquery.min.js"></script>
     <script src="js/Chart.min.js"></script>
 
-    <script src="js/line-db-php.js"></script>
+    <script src="js/line-db-php.js"></script>-->
     <script src="EndGame.js"></script>
 </body>
 </html> 
