--- a/FrontEnd/Website_Code/EndGame.html
+++ b/FrontEnd/Website_Code/EndGame.html
@@ -17,9 +17,9 @@
 </head>
 
 <body>
-    <div class="bgimg"></div>
+    <div class="bgimg1"></div>
     <div class="container1">
-        <div class="centered">GAME OVER</div>
+        <div class="centered1">GAME OVER</div>
     </div>
     <!--<div class=" chart-container">
         <canvas id="line-chartcanvas"></canvas>
