--- a/FrontEnd/Website_Code/Final_Game_Stats.html
+++ b/FrontEnd/Website_Code/Final_Game_Stats.html
@@ -1,11 +1,15 @@
 ﻿<!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>WebFront for Car Soccer</title>
+    <meta name="description" content="User Interface">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.js"></script>
+    <link rel="stylesheet" href="carStyle.css">
 
+</head>
+
+<body>
 </body>
 </html>
