Added a logout button

--- a/FrontEnd/Game_Lobby.html
+++ b/FrontEnd/Game_Lobby.html
@@ -11,6 +11,7 @@
         <div class="bgimg"></div>
         <div class="container">
             <div class="topPage">Main Page</div>
+            <buttonLogout class="buttonLogout" id="logout">Logout</buttonLogout>
             <buttonStat class="buttonStat" id="stats">Statistics</buttonStat>
             <buttonGame class="buttonGame" id="game">Play Game</buttonGame>
         </div>
