--- a/FrontEnd/Login_Page.html
+++ b/FrontEnd/Login_Page.html
@@ -10,7 +10,8 @@
 
 </head>
     <body>
-        <input type="image" value="Submit" id="myImage" src="login_page_pic.png"/>
+        <input type="image" value="submit" id="myImage" src="login_page_pic.png">
+        <h2>Play Game</h2>
         <script src="Login_Page.js"></script>
     </body>
      
